# Resume_Chatbot

./: .gitignore  CORPUS_ENHANCEMENT_GUIDE.md  LLM_JUDGE_README.md  README.md  README_ENHANCED.md  README_RAG_PIPELINE.md  app.py  chatbot_test_results_20250924_211915.json  chatgpt_evaluation_prompt_20250924_211915.txt  corpus_original.jsonl  data_loader.py  index_builder.py  make_corpus_from_text.py  merge_corpus.py  prompt_templates.py  pyproject.toml  quick_test.py  quick_test_prompt_20250924_211546.txt  requirements-enhanced.txt  requirements_rag.txt  retriever.py  run_evaluation.py  sample_about.txt  sample_corpus_extra.jsonl  sample_manifest.json  sample_manifest.yaml  sample_projects.txt  setup_enhanced.py  simple_app.py  test_api.py  test_data_loader.py  test_enhanced_judge.py  test_llm_judge.py  test_prompt_builder.py  test_prompt_simple.py  test_rag_pipeline.py
data/resume/: knowledge_graph.json  resume_example.md
resume_chatbot/: __init__.py  cache.py  chatbot.py  cli.py  corpus.py  data_loader.py  enhanced_chatbot.py  enhanced_data_loader.py  enhanced_webapp.py  knowledge_graph.py  llm.py  prompt_templates.py  qa_service.py  retriever.py  text_utils.py  vector_store.py  webapp.py
resume_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_chatbot.py  test_corpus.py  test_data_loader.py  test_knowledge_graph.py  test_llm_factory.py  test_qa_service.py  test_retriever.py  test_webapp.py
